Recurring snapshot UI: fix tab wrapping

--- a/ui/css/cloudstack3.css
+++ b/ui/css/cloudstack3.css
@@ -6796,7 +6796,7 @@ div.panel.ui-dialog div.list-view div.fixed-header {
 .recurring-snapshots .ui-tabs ul li a {
   width: 76px;
   text-indent: 28px;
-  margin: 0 32px 0 0;
+  margin: 0 14px 0 0;
   padding: 8px 0 5px;
   background: url(../images/sprites.png) no-repeat -521px -540px;
   border: none;
